--- a/Theater_ticket_booking/Theater_ticket_booking/Views/_ViewImports.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/_ViewImports.cshtml
@@ -1,3 +1,14 @@
-﻿@using Theater_ticket_booking
-@using Theater_ticket_booking.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿
+@{ ViewData["Title"] = "Регистрация"; }
+<div class="center-child vh-100">
+    <form action="/api/User" method="GET" class="card p-5" style="width: 30rem;">
+
+        <label class="mx-auto">Регистрация</label>
+        <input type="text" name="username" id="username" class="w-90 mx-auto mt-2">
+        <input type="password" name="password" id="password" class="w-90 mx-auto mt-2">
+
+        <input type="submit" value="Войти" class="btn btn-primary w-90 mx-auto mt-2">
+        <a href="/Home" class="card-link mx-auto">Регистрация</a>
+
+    </form>
+</div>
