Добавлены стартовые страницы, вход и выход из аккаунта

--- a/Theater_ticket_booking/Theater_ticket_booking/Views/Account/Login.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/Account/Login.cshtml
@@ -33,7 +33,7 @@
                 window.location.replace(redirectUrl);
             } else
             {
-                window.location = '/Dialogs';
+                window.location = '/Account';
             }
             //Иначе отправить на какую-то страницу
             //TODO: доделать
