--- a/Theater_ticket_booking/Theater_ticket_booking/Views/Shared/_LayoutEmpty.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/Shared/_LayoutEmpty.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@title Знакомства</title>
+    <title>@title Театр</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
