Добавлены шаблоны афишы

--- a/Theater_ticket_booking/Theater_ticket_booking/Views/Shared/_Layout.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/Shared/_Layout.cshtml
@@ -9,10 +9,15 @@
     <link href="~/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="~/node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
 
+    <link rel="stylesheet" href="~/node_modules/flatpickr/dist/flatpickr.min.css">
+    <script src="~/node_modules/flatpickr/dist/flatpickr.min.js"></script>
+    <script src="~/node_modules/flatpickr/dist/l10n/ru.js"></script>
+
     <script src="~/node_modules/jquery/dist/jquery.js"></script>
     <script src="~/node_modules/jquery.cookie/jquery.cookie.js"></script>
     <script src="~/node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="~/js/site.js"></script>
+
 </head>
 
 <div class="sidebar-container">
@@ -23,6 +28,13 @@
         <li>
             <a href="/Account">
                 <i class="fa fa-history" aria-hidden="true"></i> Настройки
+            </a>
+        </li>
+
+
+        <li>
+            <a href="/Event">
+                <i class="fa fa-history" aria-hidden="true"></i> Афиша
             </a>
         </li>
 
