Добавлены функции бронирования и отмены заказа

--- a/Theater_ticket_booking/Theater_ticket_booking/Views/Account/Account.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/Account/Account.cshtml
@@ -4,13 +4,13 @@
 @{
     ViewData["Title"] = "Аккаунт";
 }
-<div class="d-flex flex-column w-75 border ml-3">
+<div class="card shadow">
 
-    <div class="card-header">
+    <div class="card-header card-header py-3 d-flex flex-row align-items-center">
         <span>Настройки</span>
     </div>
 
-    <form class="p-2 pt-5">
+    <form class="card-body container-fullcalendar">
 
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group d-flex ">
