--- a/Theater_ticket_booking/Theater_ticket_booking/Views/Event/_EventPartial.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/Event/_EventPartial.cshtml
@@ -1,12 +1,15 @@
-﻿<div class="row row-cols-1 row-cols-md-4" id="Events">
+﻿@using Theater_ticket_booking.TagHelpers
+
+
+<div class="row row-cols-1 row-cols-md-4" id="Events">
 
     <div class="col mb-4">
-        <div class="card shadow" >
+        <div class="card shadow">
             <img src="https://sun9-56.userapi.com/impg/cHPDwO7FDtki4BZ6_vAD1fFZgewxKd7BMjCoWw/O2QokcLexM0.jpg?size=833x500&quality=96&proxy=1&sign=37461966fa37122559137c286269c4cb&type=album"
-                 class="card-img-top" >
+                 class="card-img-top">
 
             <div class="card-body" style="text-align:center">
-                <h3 class="card-title" >Мастер и Маргарита</h3>
+                <h3 class="card-title">Мастер и Маргарита</h3>
                 <p class="card-text">
                     «Мастер и Маргарита» — подлинный шедевр искусства театра двадцать первого века.
                 </p>
@@ -22,7 +25,7 @@
         </div>
     </div>
 
-    <div class="col mb-4" >
+    <div class="col mb-4">
         <div class="card shadow">
             <img src="https://sun9-31.userapi.com/impg/a9qwQ0Ii6-Kbx7X-ptTYd_GYI9qEa_SzA1t_0g/Se_Caw9Jue8.jpg?size=833x500&quality=96&proxy=1&sign=aae7351d145185d0f693f4c16304323c&type=album"
                  class="card-img-top">
@@ -64,7 +67,7 @@
                     <div class="btn-group mr-2" role="group" aria-label="First group" style="margin:2px">
                         <button type="button" style="background: #1a1b28; color: white;" class="btn btn-light">10:10</button>
                     </div>
-                    <div class="btn-group mr-2" role="group" aria-label="First group" style="margin:2px">
+                    <div class="btn-group mr-2" onclick="AddOrder()" role="group" aria-label="First group" style="margin:2px">
                         <button type="button" style="background: #1a1b28; color: white;" class="btn btn-light">10:10</button>
                     </div>
                 </div>
@@ -72,7 +75,6 @@
         </div>
     </div>
 </div>
-
 
 <script>
     $(document).ready(function () {
@@ -84,6 +86,15 @@
 
         InitEvent();
     });
+
+    var refreshRoute = {
+        LoadAction: LoadList,
+        data: undefined
+    }
+
+    function getdetails(obj) {
+        ajaxDetail("GetEvent", "Event", ModalBody, obj.id, refreshRoute);
+    };
 
     function InitEvent() {
         var date = document.getElementById("date").value;
@@ -104,7 +115,15 @@
     function FillEvent(events) {
         $("#Events").empty();
 
-        events.forEach(function (item, i, arr) {
+        events.forEach(function (item, i, arr)
+        {
+            var button = "";
+            item.event.forEach(function (item, i, arr) {
+                button += '<div class="btn-group mr-2" role="group" aria-label="First group" style="margin:2px">' +
+                    '<button type="submit" onClick = "getdetails(this)" id="' + item.id +'" style="background: #1a1b28; color: white;" class="btn btn-light btn-success br20px p4px10px" href="#" data-toggle="modal" data-target="#ModalPartial"">' + item.time + '</button>' +
+                    '</div>';
+            });
+
             $('#Events').append('<div class="col mb-4">' +
                 '<div class="card shadow" >' +
                 '<img src="' + item.photo + '"' +
@@ -112,15 +131,10 @@
                 '<div class="card-body" style="text-align:center">' +
                 '<h3 class="card-title" >' + item.name + '</h3>' +
                 '<p class="card-text">' +
-                item.miniDescription + 
+                item.miniDescription +
                 '</p>' +
                 '<div class="card-body">' +
-                '<div class="btn-group mr-2" role="group" aria-label="First group" style="margin:2px">' +
-                '<button type="button" style="background: #1a1b28; color: white;" class="btn btn-light">18:30</button>' +
-                '</div>' +
-                '<div class="btn-group mr-2" role="group" aria-label="First group" style="margin:2px">' +
-                '<button type="button" style="background: #1a1b28; color: white;" class="btn btn-light">21:10</button>' +
-                '</div>' +
+                button +
                 '</div>' +
                 '</div>' +
                 '</div>' +
