--- a/Theater_ticket_booking/Theater_ticket_booking/Views/_ViewImports.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Theater_ticket_booking
+
 @{ ViewData["Title"] = "Регистрация"; }
 <div class="center-child vh-100">
     <form action="/api/User" method="GET" class="card p-5" style="width: 30rem;">
