--- a/Theater_ticket_booking/Theater_ticket_booking/Views/Account/Registration.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/Account/Registration.cshtml
@@ -46,7 +46,7 @@
             if (redirectUrl != undefined && redirectUrl != "") {
                 window.location.replace(redirectUrl);
             } else {
-                window.location = '/Account';
+                window.location = '/Event';
             }
         }
         else {
