--- a/Theater_ticket_booking/Theater_ticket_booking/Views/Shared/_Layout.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/Shared/_Layout.cshtml
@@ -1,7 +1,5 @@
 ﻿<!DOCTYPE html>
 <head>
-    <title>@ViewData["Title"]Театр</title>
-
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -29,25 +27,25 @@
 
         <li>
             <a href="/Event">
-                <i class="fa fa-history" aria-hidden="true"></i> Афиша
+                <i class="fa fa-calendar" aria-hidden="true"></i> Афиша
             </a>
         </li>
 
         <li>
             <a href="/Order">
-                <i class="fa fa-history" aria-hidden="true"></i> Мои заказы
+                <i class="fa fa-shopping-basket" aria-hidden="true"></i> Мои заказы
             </a>
         </li>
 
         <li>
-            <a href="/Account">
-                <i class="fa fa-history" aria-hidden="true"></i> Настройки
+            <a href="/Settings">
+                <i class="fa fa-cog" aria-hidden="true"></i> Настройки
             </a>
         </li>
 
         <li>
             <a href="#" class="my-2 menu-item" onclick="LogOut()">
-                <i class="fa fa-history" aria-hidden="true"></i> Выйти
+                <i class="fa fa-sign-out" aria-hidden="true"></i> Выйти
             </a>
         </li>
 
