--- a/Theater_ticket_booking/Theater_ticket_booking/Views/Account/Login.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/Account/Login.cshtml
@@ -33,10 +33,8 @@
                 window.location.replace(redirectUrl);
             } else
             {
-                window.location = '/Account';
+                window.location = '/Event';
             }
-            //Иначе отправить на какую-то страницу
-            //TODO: доделать
         }
         else
         {
