--- a/Theater_ticket_booking/Theater_ticket_booking/Views/Account/Registration.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/Account/Registration.cshtml
@@ -17,7 +17,7 @@
         <span id="error-text" class="w-90 mx-auto mb-2" style="display: none;color: red;"></span>
 
         <input type="submit" value="Зарегистрироваться" class="btn btn-primary w-90 mx-auto mt-2">
-        <a href="/Account/Login" class="card-link mx-auto" onclick="OpenLink(this, event)">Вход</a>
+        <a href="/Login" class="card-link mx-auto" onclick="OpenLink(this, event)">Вход</a>
 
     </form>
 </div>
