--- a/Theater_ticket_booking/Theater_ticket_booking/Views/Shared/_LayoutEmpty.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/Shared/_LayoutEmpty.cshtml
@@ -1,11 +1,9 @@
-﻿@{ var title = (string)ViewData["Title"]; }
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>@ViewData["Title"]</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@title</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -16,7 +14,7 @@
     @RenderBody()
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - Интернет-сайт театра
+            &copy; 2020 - Интернет-сайт знакомств
         </div>
     </footer>
     <script src="~/js/site.js" asp-append-version="true"></script>
