--- a/Theater_ticket_booking/Theater_ticket_booking/Views/Account/Login.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/Account/Login.cshtml
@@ -12,7 +12,7 @@
         <span id="error-text" class="w-90 mx-auto mb-2" style="display: none;color: red;"></span>
 
         <input type="submit" value="Войти" class="btn btn-primary w-90 mx-auto mt-2">
-        <a href="/Account/Registration" class="card-link mx-auto" onclick="OpenLink(this,event)">Регистрация</a>
+        <a href="/Registration" class="card-link mx-auto" onclick="OpenLink(this,event)">Регистрация</a>
 
     </form>
 </div>
