--- a/Theater_ticket_booking/Theater_ticket_booking/Views/Event/_OrderPartial.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/Event/_OrderPartial.cshtml
@@ -6,6 +6,7 @@
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
+
 <div id="modal-body" class="modal-body">
     <dl class="dl-horizontal">
         <dt class="col-sm-10">
@@ -83,12 +84,12 @@
 </form>
 
 <script>
-
     $(document).ready(function () {
         $("select_row").selectpicker();
         LoadSeat();
     });
 
+    // Получение списка мест
     function LoadSeat() {
         var row = document.getElementById("Row").value;
         var eventId = @Html.DisplayFor(model => model.EventId);
@@ -105,6 +106,7 @@
         });
     }
 
+    // Обновление списка мест
     function ChangeSeats(row) {
         $("#Seats").empty();
 
@@ -114,6 +116,7 @@
         $('.selectpicker').selectpicker('refresh')
     }
 
+    // Получение суммы денег для выбранных мест
     function LoadSum() {
         var sumSeats = $('#Seats').val();
 
@@ -123,13 +126,14 @@
             traditional: true,
             data: { sumSeats: sumSeats},
             success: function (result) {
-                document.getElementById("sum").innerHTML = "Общая сумма: " + result;
+                document.getElementById("sum").innerHTML = "Общая сумма: " + result + " р.";
             },
             complete: function () {
             }
         });
     }
 
+    // Оформления брони
     function BookSeats() {
         var sumSeats = $('#Seats').val();
         var eventId = @Html.DisplayFor(model => model.EventId);
