Добавлено: api, docker файлы

--- a/Theater_ticket_booking/Theater_ticket_booking/Views/Order/Index.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/Order/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<div id="orders"></div>
+﻿@{ ViewData["Title"] = "Мои заказы"; }
+
+<div id="orders"></div>
 
 <script>
     $(document).ready(function () {
