--- a/Theater_ticket_booking/Theater_ticket_booking/Views/Event/Index.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/Event/Index.cshtml
@@ -30,7 +30,7 @@
             </span>
 
             <input class="calendars" type="text" id="date" placeholder="Пожалуйста, выберите дату"
-                   value="@(DateTime.UtcNow.AddHours(4).DateTimeToString("dd.MM.yyyy HH:mm:ss"))" onchange="GetEvents()" data-input>
+                   value="@(DateTime.UtcNow.AddHours(4).DateTimeToString("dd.MM.yyyy"))" onchange="GetEvents()" data-input> 
         </div>
     </div>
 </div>
