--- a/Theater_ticket_booking/Theater_ticket_booking/Views/Shared/_Layout.cshtml
+++ b/Theater_ticket_booking/Theater_ticket_booking/Views/Shared/_Layout.cshtml
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="~/css/site.css" />
+    <link href="~/css/util.css" rel="stylesheet" />
+    <link href="~/css/contactus.css" rel="stylesheet" />
+
     <link href="~/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="~/node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
 
@@ -23,7 +26,7 @@
 </head>
 
 <div class="sidebar-container">
-    <div class="sidebar-logo"> Театр </div>
+    <div class="sidebar-logo">Бронирование билетов</div>
 
     <ul class="sidebar-navigation">
 
@@ -42,6 +45,12 @@
         <li>
             <a href="/Settings">
                 <i class="fa fa-cog" aria-hidden="true"></i> Настройки
+            </a>
+        </li>
+
+        <li>
+            <a href="/ContractUs">
+                <i class="fa fa-comments" aria-hidden="true"></i> Связаться с нами
             </a>
         </li>
 
